Fixed URL conversion containing unicode